examples/examples_inferred/bad/wrong_type_arg_1.ez
f x = x + x + x + x;

main = f True;
